clusters/loudnova/apps/paymentops/overlays/dev/patch-address-structuring.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paymentops-address-structuring
  namespace: paymentops
spec:
  replicas: 1
  template:
    metadata:
      labels:
        environment: dev
    spec:
      containers:
        - name: address-structuring
          image: ghcr.io/cloodnova/paymentops-address-structuring:b9700c858406e771daec0f70d3afbda709c94051
