clusters/loudnova/apps/paymentops/overlays/dev/patch-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paymentops-api
  namespace: paymentops
spec:
  replicas: 2
  template:
    metadata:
      labels:
        environment: dev
    spec:
      containers:
        - name: paymentops-api
          image: ghcr.io/cloodnova/paymentops-api:1c1dfd9f165ff35fe8ff22286ec41e6362936da4
