clusters/loudnova/apps/paymentops/overlays/dev/patch-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paymentops-web
  namespace: paymentops
spec:
  replicas: 2
  template:
    metadata:
      labels:
        environment: dev
    spec:
      containers:
        - name: paymentops-web
          image: ghcr.io/cloodnova/paymentops-web:1c1dfd9f165ff35fe8ff22286ec41e6362936da4
