clusters/loudnova/apps/paymentops/overlays/dev/patch-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paymentops-worker
  namespace: paymentops
spec:
  replicas: 1
  template:
    metadata:
      labels:
        environment: dev
    spec:
      containers:
        - name: paymentops-worker
          image: ghcr.io/cloodnova/paymentops-worker:b04c2f7b72e6b8ab008f8afec74c843b632fc3fd
